Fix edge-case bug in finding labels and add test.

--- a/ftests/controls.html
+++ b/ftests/controls.html
@@ -152,6 +152,13 @@
       </div>
 
       <div>
+        <label for="non-word-characters">*[non word characters should not
+          confuse]</label>
+        <input type="text" name="non-word-characters"
+               id="non-word-characters" />
+      </div>
+
+      <div>
         <label for="two-labels">Multiple labels really</label>
         <label for="two-labels">really are possible</label>
         <input type="text" name="two-labels"
