fix bug caused be impedance mis-match between Mechanize and zope.testbrowser

--- a/ftests/navigate.html
+++ b/ftests/navigate.html
@@ -18,6 +18,8 @@
 
     <a href="navigate.html?message=By+Id" id="anchorid">By Anchor Id</a>
 
+    <a href="navigate.html?message=Spaces in URL">Spaces in the URL</a>
+
     <form action="navigate.html" method="post">
       <input name="message" value="By Form Submit" />
       <input type="submit" name="submit-form" value="Submit" />
