Bugfix: for logical consistency, a select field with a label that is ambiguous with that of one of its options should raise an ambiguity error.  It was returning the option.

--- a/ftests/controls.html
+++ b/ftests/controls.html
@@ -183,6 +183,16 @@
         </label>
       </div>
 
+      <div>
+        If you have a select field with a label that overlaps with one of its
+        options' labels, that is ambiguous.
+        <label for="ambiguous-subcontrol">Sub-control Ambiguity</label>
+        <select name="ambiguous-subcontrol" id="ambiguous-subcontrol">
+          <option value="">(none)</option>
+          <option value="ambiguous">Sub-control Ambiguity Exemplified</option>
+        </select>
+      </div>
+
 
     </form>
 
