--- a/ftests/controls.html
+++ b/ftests/controls.html
@@ -3,7 +3,7 @@
 
     <h1>Controls Tests</h1>
 
-    <form action="controls.pt" method="post">
+    <form action="controls.html" method="post">
 
       <div>
         <label for="text-value">Text Control</label>
