rework zope.testbrowser testing; will eventually allow the different flavors of testbrowser to all run the same tests; also helps with the required packages trimming

--- a/src/zope/testbrowser/ftests/navigate.html
+++ b/src/zope/testbrowser/ftests/navigate.html
@@ -7,18 +7,14 @@
       Message: <em tal:content="request/message">Message</em>
     </p>
 
-    <a href="navigate.html?message=By+Link+Text">Link Text</a>
+    <a href="target.html">Link Text</a>
 
-    <a href="navigate.html?message=By+Link+Text+with+Normalization"> Link Text 
+    <a href="target.html"> Link Text 
     with     Whitespace	Normalization (and parens) </a>
 
-    <a href="navigate.html?message=By+URL">Using the URL</a>
+    <a href="target.html" id="anchorid">By Anchor Id</a>
 
-    <a href="navigate.html?message=By+Name" name="anchorname">By Anchor Name</a>
-
-    <a href="navigate.html?message=By+Id" id="anchorid">By Anchor Id</a>
-
-    <a href="navigate.html?message=Spaces in URL">Spaces in the URL</a>
+    <a href="target.html">Spaces in the URL</a>
 
     <form action="navigate.html" method="post">
       <input name="message" value="By Form Submit" />
@@ -27,11 +23,11 @@
 
     <img src="./zope3logo.gif" usemap="#zope3logo" />
     <map name="zope3logo">
-      <area shape="rect" alt="Zope3" 
-            href="navigate.html?message=Zope+3+Name" id="zope3" title="Zope 3" 
+      <area shape="rect" alt="Zope3"
+            href="target.html" id="zope3" title="Zope 3"
             coords="44,7,134,33" />
-      <area shape="circle" alt="Logo" 
-            href="navigate.html?message=Logo" id="logo" title="Logo" 
+      <area shape="circle" alt="Logo"
+            href="navigate.html?message=Logo" id="logo" title="Logo"
             coords="23,21,18" />
     </map>
 
