--- a/src/zope/testbrowser/ftests/forms.html
+++ b/src/zope/testbrowser/ftests/forms.html
@@ -6,26 +6,25 @@
     <em tal:condition="request/text-value|nothing"
         tal:content="request/text-value" />
 
-    <form id="1" name="one" action="forms.html"
-          enctype="multipart/form-data" method="post">
+    <form id="1" name="one" action="forms.html" method="post">
       <input type="text" name="text-value" value="First Text" />
       <input type="image" name="image-1" src="zope3logo.gif" />
       <input type="submit" name="submit-1" value="Submit" />
     </form>
 
-    <form id="2" name="two" action="forms.html">
+    <form id="2" name="two" action="forms.html" method="post">
       <input type="text" name="text-value" value="Second Text" />
       <input type="submit" name="submit-2" value="Submit" />
     </form>
 
-    <form id="3" name="three" action="forms.html">
+    <form id="3" name="three" action="forms.html" method="post">
       <label for="text-value-3">Text Control</label>
       <input type="text" name="text-value" id="text-value-3"
              value="Third Text" />
       <input type="submit" name="submit-3" value="Submit" />
     </form>
 
-    <form action="forms.html">
+    <form action="forms.html" method="post">
       <label for="text-value-4">Text Control</label>
       <input type="text" name="text-value" id="text-value-4"
              value="Fourth Text" />
