Snapshot of work.

--- a/src/zope/testbrowser/ftests/navigate.html
+++ b/src/zope/testbrowser/ftests/navigate.html
@@ -35,5 +35,11 @@
             coords="23,21,18" />
     </map>
 
+    <a href="navigate.html?message=Matching+text+with+more">Matching text with more</a>
+
+    <a href="navigate.html?message=Matching+text">Matching text</a>
+
+    <a href="navigate.html?message=Matching+text+with+more+to+it">Matching text with more to it</a>
+
   </body>
 </html>
