Remove dependency on zope.app.publisher in favor of zope.browserpage, zope.browserresource and zope.ptresource.

--- a/src/zope/testbrowser/ftests/controls.html
+++ b/src/zope/testbrowser/ftests/controls.html
@@ -3,7 +3,7 @@
 
     <h1>Controls Tests</h1>
 
-    <form action="controls.html" method="post">
+    <form action="controls.html" method="get">
 
       <div>
         <label for="text-value">Text Control</label>
