Add tests confirming redirect behavior
The following functional tests are added:

* Perform redirect on browser.submit if 30x is returned

If `browser.mech_browser.set_handle_redirects(False)` is called and
`browser.raiseHttpErrors` is set to `False`, redirects shouldn't be
performed automatically:

* Do not perform redirect on browser.open if 30x is returned
* Do not perform redirect on browser.submit if 30x is returned

The last of the 3 added tests tests the code introduced in GitHub
zopefoundation/zope.testbrowser#4, while the first two tests confirm
prior behavior.

--- a/src/zope/testbrowser/ftests/forms.html
+++ b/src/zope/testbrowser/ftests/forms.html
@@ -32,5 +32,10 @@
       <input type="hidden" name="hidden-4" value="marker" />
     </form>
 
+    <form id="5" name="redirect" action="/redirect.html">
+      <input type="text" name="to" value="/set_status.html" />
+      <input type="submit" name="submit-5" value="Submit" />
+    </form>
+
   </body>
 </html>
