--- a/src/zope/testbrowser/ftests/controls.html
+++ b/src/zope/testbrowser/ftests/controls.html
@@ -112,6 +112,11 @@
       </div>
 
       <div>
+        <input type="radio" name="radio-value-a" id="radio-value-a-1" value="true" />
+        <input type="radio" name="radio-value-a" id="radio-value-a-2" value="true" />
+      </div>
+
+      <div>
         <label for="image-value">Image Control</label>
         <em>%(image-value.x)s</em>
         <em>%(image-value.y)s</em>
