Restore raising of AttributeError when trying to set value of a read only control.

--- a/src/zope/testbrowser/ftests/controls.html
+++ b/src/zope/testbrowser/ftests/controls.html
@@ -12,6 +12,12 @@
       </div>
 
       <div>
+        <label for="text-value">Read Only Control</label>
+        <em>%(text-value)s</em>
+        <input type="text" name="readonly-value" id="readonly-value" readonly value="Read Only Text" />
+      </div>
+
+      <div>
         <label for="password-value">Password Control</label>
         <em>%(password-value)s</em>
         <input type="password" name="password-value" id="password-value"
